Code added to profile pages to pull logged in user after sign up.

--- a/Client/src/pages/signup.css
+++ b/Client/src/pages/signup.css
@@ -13,7 +13,7 @@ input {
     margin: auto;
 }
 
-button {
+.signin {
     border: 1px solid gray;
     border-radius: 25px;
     background-color: blue;
