--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -1,11 +1,5 @@
-<<<<<<< HEAD
 :root {
-  --primary-color: #cddc39;
-=======
-
-:root{
-  --primary-color: #5464FF;
->>>>>>> 3fb1994c0d5f30b4f37936687f5338c57c11d94f
+  --primary-color: #5464ff;
   --secondary-color: #000000;
 }
 .nav-container {
