--- a/client/src/pages/signin.css
+++ b/client/src/pages/signin.css
@@ -1,21 +1,27 @@
+*{
+    /* background-color: blue; */
+}
+
 h1 {
     text-align: center;
     font-size: 300%;
     margin-bottom: 2%;
     font-weight: 500;
+    margin-top: 10%;
+    color: blue;
 }
 
 .login {
     display: flex;
     justify-content: center;
     margin: auto;
-    border: 1px solid gray;
+    border: 3px solid gray;
     border-radius: 25px;
     text-align: center;
     width: 50%;
     max-width: 500px; 
     font-size: 150%;
-    margin-top: 10%;
+    margin-top: 5%;
     padding: 20px;
 }
 
@@ -50,6 +56,6 @@ input {
 
 .signup {
     text-align: center;
-    padding-top: 8%;
+    padding-top: 5%;
     font-size: 150%;
 }
