--- a/client/src/pages/signup.css
+++ b/client/src/pages/signup.css
@@ -4,12 +4,13 @@
     justify-content: center;
     align-items: center;
     margin: auto; 
-    border: 1px solid gray;
+    border: 3px solid gray;
     border-radius: 25px;
     max-width: 500px;
     font-size: 150%;
     padding: 20px;  
-    margin-top: 10%;   
+    margin-top: 5%;
+    margin-bottom:5%;   
 }
 
 .su {
