--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,6 +2,7 @@
   --primary-color: #5464ff;
   --secondary-color: #000000;
 }
+/* NavBar */
 .nav-container {
   display: flex;
   align-items: center;
@@ -23,6 +24,20 @@
 
 .navBar {
   background-color: var(--primary-color);
+}
+
+/* Home */
+
+.line {
+  margin-top: 10px;
+  background: 
+    linear-gradient(black 0 0) no-repeat
+    var(--p,0) 120%/var(--p, 0) .2em;
+  transition: 0.4s, background-position 0s;
+}
+
+.line:hover {
+  --p: 100%;
 }
 
 /* Jobs Section */
