Trying to get jobs pages working.

--- a/client/src/pages/jobBoard.css
+++ b/client/src/pages/jobBoard.css
@@ -20,3 +20,10 @@ form {
     margin-bottom: 1%;
     cursor: pointer; 
   }
+
+  .job-details {
+  margin-top: 20px;
+  padding: 15px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+}
